fix member notification